added deploy script and some minor css fixes

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 					customPurposeListLocation: 'docs/purposes.json',
 					globalConsentLocation: 'docs/portal.html',
 					theme: {
-						primaryColor: '#c9a2ac',
+						primaryColor: '#cd9023',
 						secondaryColor: '#00051c',
 						fontFamily: 'Lato',
 					},
